# chomp

./: Cargo.toml  README.md
src/: db.rs  food.rs  logging.rs  main.rs  mcp.rs
