[package]
name = "chomp"
version = "0.1.0"
edition = "2021"
description = "Local food database CLI for AI-assisted nutrition tracking"
license = "MIT"
repository = "https://github.com/ruthmade/chomp"
keywords = ["nutrition", "food", "cli", "tracking", "ai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
dirs = "5"
anyhow = "1"
tabled = "0.15"
tokio = { version = "1", features = ["rt", "io-std", "io-util", "macros"] }
